--- a/app/views/layouts/dashboard.html.haml
+++ b/app/views/layouts/dashboard.html.haml
@@ -1,5 +1,8 @@
 - content_for(:title, 'App')
+
 - content_for :layout_specific do
-  = yield
+    -# example:
+    -# = render 'shared/sidenav'
+    = yield
 
 = render template:"layouts/base"
