--- a/app/views/shared/_global_header.html.haml
+++ b/app/views/shared/_global_header.html.haml
@@ -1,4 +1,4 @@
-%header.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+%header.navbar.navbar-inverse.navbar-static-top{:role => "navigation"}
   .container
     .navbar-header
       %button.navbar-toggle.collapsed{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", :type => "button"}
@@ -10,7 +10,7 @@
     .navbar-collapse.collapse
       %form.navbar-form.navbar-right{:role => "form"}
         .form-group
-          %input.form-control{:placeholder => "Email", :type => "text"}/
+          %input.form-control{:placeholder => "Email", :type => "text"}
         .form-group
-          %input.form-control{:placeholder => "Password", :type => "password"}/
+          %input.form-control{:placeholder => "Password", :type => "password"}
         %button.btn.btn-success{:type => "submit"} Sign in
