--- a/app/views/shared/_dev_tools.html.haml
+++ b/app/views/shared/_dev_tools.html.haml
@@ -5,7 +5,7 @@
     = link_to "routes", "/rails/info/routes", class:"btn"
     = link_to "mailcatcher", "http://127.0.0.1:1080", class:"btn"
     = link_to (I18n.available_locales - [I18n.locale]).first, url_for(request.query_parameters.merge(_locale: (I18n.available_locales - [I18n.locale]).first)), class:"btn"
-    -#= select_tag "company_id", options_for_select(Company.order("NAME ASC").all.collect{|u| ["#{u.name} [#{u.email}] #{u.id}", u.id] },  [current_company.try(:email), current_company.try(:id)] ), style:"width:200px"
+    = select_tag "user_id", options_for_select(User.all.collect{|u| ["[#{u.email}] #{u.id}", u.id] },  [current_user.try(:email), current_user.try(:id)] ), style:"width:200px"
     %button.btn.btn-xs.btn-white{onClick:"$('#dev-tools form').submit();"}
       %i.fa.fa-arrow-right
     = link_to "X", "#", class:"btn", onClick:"$('#dev-tools').hide();return false;"
