--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
     %h1= t('hello')
     %p This is a template for a simple Rails app. It includes a set of tools that we tend to use in our projects. Use it as a starting point to create something more unique.
     %p
-      %a.btn.btn-primary.btn-lg{:role => "button"} Learn more »
+      = link_to t("frontpage.sign_up_btn"), new_user_registration_path, class:"btn btn-primary btn-lg"
     #x-bootstrap-example-from-backend-anchor
 .container
   .row
