--- a/app/views/shared/_global_header.html.haml
+++ b/app/views/shared/_global_header.html.haml
@@ -8,9 +8,17 @@
         %span.icon-bar
       %a.navbar-brand{:href => "/"} Project name
     .navbar-collapse.collapse
-      %form.navbar-form.navbar-right{:role => "form"}
-        .form-group
-          %input.form-control{:placeholder => "Email", :type => "text"}/
-        .form-group
-          %input.form-control{:placeholder => "Password", :type => "password"}/
-        %button.btn.btn-success{:type => "submit"} Sign in
+      - if current_user
+        .t_user_menu.navbar-right
+          %p.navbar-text
+            = current_user.email
+          = link_to t("log_out"), destroy_user_session_path, method: :delete, class:"btn btn-link navbar-btn"
+
+      - else
+        = form_for(User.new, as: :user, url: session_path(User.new), html: { id:nil, class: "navbar-form navbar-right t_login_form"}) do |f|
+          .form-group
+            = f.email_field :email, :placeholder => "Email", class: "form-control"
+          .form-group
+            = f.password_field :password, autocomplete: "off", :placeholder => "Password", class: "form-control"
+
+          = f.submit  t('.sign_in', :default => "Sign in"), class: "btn btn-success"
