--- a/app/views/shared/_global_header.html.haml
+++ b/app/views/shared/_global_header.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "/"} Project name
+      %a.navbar-brand{:href => "/"} Rails Blank App
     .navbar-collapse.collapse
       %form.navbar-form.navbar-right{:role => "form"}
         .form-group
